@@ -46,6 +46,7 @@
 #import <Protocols/CodeEditor.h>
 
 #import "Modules/Preferences/Saving/PCSavingPrefs.h"
+#import "Modules/Preferences/Misc/PCMiscPrefs.h"
 #import "Modules/Preferences/Interface/PCInterfacePrefs.h"
 
 NSString 
