@@ -1,3 +1,15 @@
+2009-03-01 03:10  Sergii Stoian <stoyan255@gmail.com>
+
+	* Modules/Preferences/Interface/PCInterfacePrefs.h:
+	* Modules/Preferences/Interface/Resources/InterfacePrefs.gorm:
+	* Modules/Preferences/Interface/PCInterfacePrefs.m:
+	Move options "Remember windows and panels opened in project" and
+	"Display Log Panel at startup" from here...
+	* Modules/Preferences/Misc/PCMiscPrefs.h:
+	* Modules/Preferences/Misc/PCMiscPrefs.m:
+	* Modules/Preferences/Misc/Resources/MiscPrefs.gorm:
+	to here.
+
 2009-03-01 00:47  Sergii Stoian <stoyan255@gmail.com>
 
 	* Modules/Preferences/Build/PCBuildPrefs.h:
